# fdtd-mcp

./: .gitignore  README.md  README_zh.md  install.py  pyproject.toml
fdtd_mcp/: __init__.py  bridge.py  discovery.py  server.py
