[project]
name = "fdtd-mcp"
version = "0.1.0"
description = "MCP server for Lumerical FDTD automation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FDTD MCP contributors"},
]
keywords = ["mcp", "fdtd", "lumerical", "simulation", "photonics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = ["mcp"]

[project.scripts]
fdtd-mcp = "fdtd_mcp.server:main"

[project.urls]
Homepage = "https://github.com/plaask/fdtd-mcp"
Repository = "https://github.com/plaask/fdtd-mcp"
